<resources>
    <string name="app_name">中京大学バス</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_station">浄水駅行き</string>
    <string name="to_college">大学行き</string>
    <string name="today_diagram">今日の運行ダイヤ</string>
    <string name="switching">切り替える</string>
    <string name="cancel">キャンセル</string>
    <string name="more_time">出発まであと</string>
    <string name="start_college">大学発</string>
    <string name="arrival_station">浄水駅着</string>
    <string name="start_station">浄水駅発</string>
    <string name="arrival_college">大学着</string>
    <string name="time_table">時刻表</string>
    <string name="calendar">カレンダー</string>
    <string name="recent_bus">次に来るバス一覧</string>
    <string name="time_is_indication">※到着時刻は目安です</string>
    <string name="network_error_message">通信エラーが発生しました</string>
    <string name="setting">設定</string>
    <string name="first_view_setting">起動時に表示する項目</string>
    <string name="version">バージョン</string>
    <string name="this_app">このアプリについて</string>
    <string name="precaution">利用上の注意</string>
    <string name="dark_mode">ダークテーマ</string>
    <string name="theme_is_changed">テーマを切り替えました。アプリを再起動してください。</string>
    <string name="first_view_title">起動時の表示</string>
    <string name="is_kaizu">貝津経由</string>
    <string name="is_return">折返し</string>
    <string name="is_last">最終バス</string>
    <string name="operation_is_end">本日の運行は終了しました</string>
    <string name="operation_is_suspend">本日は運休です</string>
    <string name="calendar_and_diagrams_can_next">明日以降の運行カレンダーと時刻表は\n以下から確認できます</string>
    <string name="first_view_setting_is_done">起動時に表示する画面を%1$sに切り替えました</string>
    <string name="first_view_setting_message">現在「%1$s」の画面が起動時に表示されます。「%2$s」に変更しますか？</string>
    <string name="ok">OK</string>
    <string name="privacy_policy">プライバシーポリシー</string>
</resources>
