<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by m.coder on 2020/1/31.
  ~ Copyright (c) 2020. nanaten All rights reserved.
  -->

<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGroupedBackground">

        <LinearLayout
            android:id="@+id/pdf_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/narrow_margin"
            android:layout_marginBottom="@dimen/narrow_margin"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/calendar_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingTop="@dimen/wide_margin"
                android:paddingBottom="@dimen/wide_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/time_table_layout"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/ic_calendar"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_small"
                    android:text="@string/calendar" />
            </LinearLayout>

            <View
                android:id="@+id/separator"
                android:layout_width="0.5dp"
                android:layout_height="@dimen/wide_margin"
                android:layout_marginTop="@dimen/wide_margin"
                android:layout_marginBottom="@dimen/wide_margin"
                android:background="@color/colorBlackText" />

            <LinearLayout
                android:id="@+id/time_table_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingTop="@dimen/wide_margin"
                android:paddingBottom="@dimen/wide_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/calendar_layout"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/ic_time_table"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_small"
                    android:text="@string/time_table" />
            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recent_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_marginTop="@dimen/narrow_margin"
            android:paddingBottom="@dimen/narrow_margin"
            app:layout_constraintTop_toBottomOf="@id/pdf_layout"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="@dimen/default_margin"
                android:textSize="@dimen/text_size_small"
                android:text="@string/recent_bus"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:text="@string/time_is_indication"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>