<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by m.coder on 2020/1/31.
  ~ Copyright (c) 2020. nanaten All rights reserved.
  -->

<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="calendar"
            type="com.nanaten.bustime.network.entity.Calendar" />

        <variable
            name="viewModel"
            type="com.nanaten.bustime.ui.viewmodel.DiagramViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGroupedBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/diagram_type_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/narrow_margin"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/today_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/narrow_margin"
                android:text="@string/today_diagram"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/today_diagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@{calendar.diagramName}"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/today_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/diagram_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/narrow_margin"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/diagram_type_layout">


            <LinearLayout
                android:id="@+id/label_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/is_last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/res_button_last"
                    android:paddingStart="@dimen/default_margin"
                    android:paddingTop="8dp"
                    android:paddingEnd="@dimen/default_margin"
                    android:paddingBottom="8dp"
                    android:text="@string/is_last"
                    android:textColor="@color/colorLast"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="@{viewModel.nextDiagram.last ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:id="@+id/is_return"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/res_button_default"
                    android:paddingStart="@dimen/default_margin"
                    android:paddingTop="8dp"
                    android:paddingEnd="@dimen/default_margin"
                    android:paddingBottom="8dp"
                    android:text="@string/is_return"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="@{viewModel.nextDiagram.return ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:id="@+id/is_kaizu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/res_button_default"
                    android:paddingStart="@dimen/default_margin"
                    android:paddingTop="8dp"
                    android:paddingEnd="@dimen/default_margin"
                    android:paddingBottom="8dp"
                    android:text="@string/is_kaizu"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="@{viewModel.nextDiagram.kaizu ? View.VISIBLE : View.GONE}" />
            </LinearLayout>

            <TextView
                android:id="@+id/more_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/middle_margin"
                app:layout_goneMarginTop="@dimen/wide_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/more_time"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_layout" />

            <TextView
                android:id="@+id/target_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:gravity="center"
                android:text="@{viewModel.next >= 3600 ? String.format(`%02d:%02d:%02d`, viewModel.next / 3600, viewModel.next / 60 % 60, viewModel.next % 60) : String.format(`%02d:%02d`, viewModel.next / 60 % 60, viewModel.next % 60)}"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/more_time_label" />

            <LinearLayout
                android:id="@+id/start_layout"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/wide_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/target_time">

                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.startTime}"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/start_place"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/ic_school"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/start_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_college"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_indicator"
                app:layout_constraintBottom_toBottomOf="@id/start_layout"
                app:layout_constraintEnd_toStartOf="@id/arrival_layout"
                app:layout_constraintStart_toEndOf="@id/start_layout"
                app:layout_constraintTop_toTopOf="@id/start_layout"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/arrival_layout"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/wide_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/target_time">

                <TextView
                    android:id="@+id/arrival_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.arrivalTime}"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/arrival_place"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/ic_train"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/arrival_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_station"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>