<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by m.coder on 2020/1/30.
  ~ Copyright (c) 2020. nanaten All rights reserved.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nanaten.bustime.ui.viewmodel.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGroupedBackground"
        tools:context=".ui.SettingsFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@drawable/res_border_1px"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/first_view_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/res_border_1px"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/first_view_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/wide_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@string/first_view_setting"
                    android:textColor="@color/colorBlackText"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/first_view"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/first_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/wide_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@{viewModel.firstView == 0 ? `浄水駅行き` : `大学行き`}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dark_mode_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/res_border_bottom_1px"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_view_layout">

                <TextView
                    android:id="@+id/dark_mode_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/wide_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@string/dark_mode"
                    android:textColor="@color/colorBlackText"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/dark_mode_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:padding="8dp"
                    android:checked="@={viewModel.isDarkMode}"
                    android:theme="@style/SwitchStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/app_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintTop_toBottomOf="@id/view_setting_layout">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/version_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/res_border_1px"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/version_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/wide_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@string/version"
                    android:textColor="@color/colorBlackText"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/wide_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@{viewModel.version}"
                    android:textColor="@color/colorBlackText"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/this_app_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/res_border_bottom_1px"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/version_layout">

                <TextView
                    android:id="@+id/this_app_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/wide_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@string/this_app"
                    android:textColor="@color/colorBlackText"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:padding="4dp"
                    android:rotation="180"
                    android:src="@drawable/ic_arrow_back"
                    android:tint="@color/colorGreyText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/precaution_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/res_border_bottom_1px"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/this_app_layout">

                <TextView
                    android:id="@+id/precaution_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/wide_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@string/precaution"
                    android:textColor="@color/colorBlackText"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:padding="4dp"
                    android:rotation="180"
                    android:src="@drawable/ic_arrow_back"
                    android:tint="@color/colorGreyText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/privacy_policy_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/res_border_bottom_1px"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/precaution_layout">

                <TextView
                    android:id="@+id/privacy_policy_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/wide_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/colorBlackText"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:padding="4dp"
                    android:rotation="180"
                    android:src="@drawable/ic_arrow_back"
                    android:tint="@color/colorGreyText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>